permitAllchange